# cropping_pointcloud

./: README.md
src/: CMakeLists.txt  package.xml
src/cfg/: croppingCloud.cfg
src/src/: cropping_pointcloud.cpp
